# helena_haffner_litRevu_P9_10052024

./: .flake8  .gitignore  README.md  db.sqlite3  pyproject.toml
authentication/: forms.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/authentication/: login.html  signup.html
litRevu/: apps.py  forms.py  models.py  urls.py  views.py
litRevu/litRevu/: settings.py  urls.py  wsgi.py
litRevu/migrations/: 0001_initial.py
litRevu/static/litRevu/: style.css
litRevu/templates/authentication/: login.html  signup.html
litRevu/templates/litRevu/: _display_content.html  _page_navigation.html  _review_content.html  _subscriptions_table.html  _ticket_content.html  _user_content_nav.html  delete.html  display_content.html  flux.html  home.html  layout.html  review_list.html  review_modification.html  reviews_list.html  subscribe.html  subscriptions_table.html  ticket.html  ticket_content.html  ticket_list.html  ticket_modification.html  tickets_list.html  user_posts.html
litRevu/templates/litRevu/creation/: _ticket.html  review.html  ticket&review.html  ticket.html
project/: asgi.py  settings.py  urls.py
