[tool.poetry]
name = "helena-haffner-litrevu-p9-10052024"
version = "0.1.0"
description = ""
authors = ["Featherine <helaena.ha2fner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-debug-toolbar = "^4.3.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
